# cameraViewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: processor.yaml
src/camera_viewer/: __init__.py  models.py  pipeline.py  pipeline_ops.py  processor.py  viewer.py
src/camera_viewer.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
